--- a/services/wallet/Dockerfile
+++ b/services/wallet/Dockerfile
@@ -1,35 +1,29 @@
-# Build Stage
 FROM golang:1.22.4-alpine AS build
 
 WORKDIR /app
 
-# Zaman dilimini ayarla
 RUN apk add --no-cache tzdata
 ENV TZ=Europe/Istanbul
 
-# Kök dizindeki go.mod ve go.sum dosyalarını kopyala
 COPY ../../go.mod ../../go.sum ./
 RUN go mod download
+RUN go install github.com/swaggo/swag/cmd/swag@v1.16.3
 
-# Tüm proje dosyalarını kopyala (pkg ve wallet servis dosyaları dahil)
 COPY ../../ .
 
-# Uygulamayı derle
-RUN go build -o wallet-service ./services/wallet/main.go
+RUN swag init --dir ./services/wallet -o services/wallet/docs
+RUN go build -o wallet-service ./services/wallet/
 
 # Run Stage
 FROM alpine:latest
 
-# Zaman dilimini ayarla
 RUN apk add --no-cache tzdata
 ENV TZ=Europe/Istanbul
 
 WORKDIR /app
 
-# Derlenmiş ikili dosyayı kopyala
 COPY --from=build /app/wallet-service .
 
-# Portu tanımla
 EXPOSE 8000
 
 # Uygulamayı başlat
