--- a/services/asset-api/Makefile
+++ b/services/asset-api/Makefile
@@ -1,8 +1,8 @@
 # Project directory and binary paths
 BIN_DIR=../../bin
-WALLET_BIN=$(BIN_DIR)/wallet-service
+WALLET_BIN=$(BIN_DIR)/wallet-api
 
-# Build the wallet-service binary
+# Build the wallet-api binary
 .PHONY: build
 build:
 	mkdir -p $(BIN_DIR)
@@ -18,7 +18,7 @@ swagger:
 clean:
 	rm -rf $(WALLET_BIN) docs
 
-# Run the wallet-service
+# Run the wallet-api
 .PHONY: run
 run:
 	go run .
