--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,10 @@ services:
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
 
 
-  asset-service:
+  asset-api:
     build:
       context: .
-      dockerfile: services/asset/Dockerfile
+      dockerfile: services/asset-api/Dockerfile
     ports:
       - "8001:8001"
     depends_on:
@@ -57,10 +57,10 @@ services:
       DB_NAME: asset
     restart: unless-stopped
 
-  wallet-service:
+  wallet-api:
     build:
       context: .
-      dockerfile: services/wallet/Dockerfile
+      dockerfile: services/wallet-api/Dockerfile
     ports:
       - "8000:8000"
     environment:
