add consumer logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,7 @@ services:
       DB_NAME: asset
       KAFKA_BROKER: kafka1:9092
       KAFKA_TOPIC: test-topic
+      KAFKA_GROUP_ID: consumer-group-1
     depends_on:
       - kafka1
     networks:
