--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,7 @@ services:
       DB_NAME: asset
       KAFKA_BROKER: kafka1:9092
       KAFKA_TOPIC: test-topic
+      FREQUENCY: "*/10 * * * * *"
     depends_on:
       - asset-db
       - kafka1
