--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,7 +126,7 @@ services:
       KAFKA_BROKER: kafka1:9092
       KAFKA_TOPIC: test-topic
       FREQUENCY: "*/10 * * * * *"
-      ENABLE_MOCK_EVENT: true
+      ENABLE_MOCK_EVENT: false
     depends_on:
       - asset-db
       - kafka1
